--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "spotify-web-api-node": "^4.0.0"
+  },
+  "scripts": {
+    "start": "nodemon ."
   }
 }
