--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^7.14.5",
     "spotify-web-api-node": "^4.0.0"
   },
   "scripts": {
