--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,10 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "14"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase": "^7.14.5",
     "firebase-admin": "^8.10.0",
