--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,3 @@
 {
-    "endpoint": "http://localhost:5000/albumranker/us-central1/albumranker"
+    "endpoint": "https://us-central1-albumranker.cloudfunctions.net/albumranker"
 }
